--- a/www/content.page
+++ b/www/content.page
@@ -39,7 +39,7 @@
                     NPL Log System
                 </h1>
                 <p>
-                    This is a log management system for TableDB. It can query, retrieval every log item and count items according to our need in visual chart.
+                    This is a log management system for TableDB. It can query, retrieval every log item and count items according to our need in visual charts.
                 </p>
                 <p>
                      <a class="btn btn-primary btn-large" href="https://github.com/Xuntian/logsystem/">Learn more</a>
@@ -90,7 +90,7 @@
 			</ul>
 
 			<div id="myTabContent" class="tab-content">
-                <div class="tab-pane fade in active" id="Search">
+                <div class="tab-pane fade in" id="Search">
                     <div style="width:100%; padding:20px 0 0 0; ">
                         <div style="float: left; padding:5px 0 0 0;">
                             keywords:<input type="text" ng-model="dbPath" ng-blur="setDBPath()">
@@ -258,61 +258,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade in" id="Overview">
+                <div class="tab-pane fade in active" id="Overview">
                     <div style="padding:10px 0 0 0;">
-                        <div class="pull-left" style="width:20%;">
+                        <div class="pull-left" style="width:12%;">
                             <a href="#" class="list-group-item active">
-                                <h4 class="list-group-item-heading">
+                                <h5 class="list-group-item-heading">
                                     Database Views
-                                </h4>
+                                </h5>
                             </a>
-                            <!--
-                            <a href="#" class="list-group-item" ng-repeat="x in Tables">
-                                <h6 class="list-group-item-text">
-                                    table-{{x}}
-                                </h6>
-                            </a>
-                            -->
-                            <ul id="root">
-                                <!--
-                                <li><a href="" onclick="return clickNode('r2n1')">Root 2</a>
-                                    <ul id="r2n1">
-                                        <li><a href="" onclick="return clickNode('r2n1n1')">Node 1</a>
-                                            <ul id="r2n1n1">
-                                                <li>Node 1</li>
-                                                <li>Node 2</li>
-                                                <li>Node 3</li>
-                                                <li><a href="#">Node 4</a></li>
-                                                <li>Node 5</li>
-                                                <li>Node 6</li>
-                                                <li>Node 7</li>
-                                                <li>Node 8</li>
-                                                <li>Node 9</li>
-                                            </ul>
-                                        </li>
-                                        <li>Node 2</li>
-                                        <li>Node 3</li>
-                                        <li><a href="" onclick="return clickNode('r2n4n1')">Node 4</a>
-                                            <ul id="r2n4n1">
-                                                <li>Node 1</li>
-                                                <li>Node 2</li>
-                                            </ul>
-                                        </li>
-                                        <li>Node 5</li>
-                                    </ul>
-                                </li>
-                                -->
 
-                                <li ng-repeat="db in givenTableContent" ng-click="#"><a href="#" onclick="return clickNode(this)">{{db}}</a>
+                            <ul id="root" style="padding:10px 0 0 -10px;">
+                                <li class="db" ng-repeat="db in givenTableContent" ng-click="showCurrentTableList($event)">{{db}}
                                     <ul style="display:none;">
-                                        <li ng-repeat="table in db">{{table}}</li>
+                                        <li class="dbtable" ng-repeat="table in db" onclick="#" ng-click="showCurrentTableContent($event)">{{table}}</li>
                                     </ul>
                                 </li>
                             </ul>
                         </div>
-                        <div class="pull-right" style="width:80%; padding:0 0 0 10px;">
+                        <div class="pull-right" style="width:88%; padding:0 0 0 10px;">
                             <table class="table table-striped">
-                                <caption style="margin:auto;">{{givenTableName}}</caption>
+                                <caption style="margin:auto; padding:10px 0 0 0;">{{givenTableName}}</caption>
                                 <thead>
                                 <tr >
                                     <th ng-repeat="item in givenTableItems">{{item}}</th>
